ingress-traefik/https-letsencrypt-DNS-Challenge-public-cloud/traefik-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-controller
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-controller
        name: traefik-ingress-controller
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
      - name: vol-traefik-toml-file
        configMap:
          # Configmap needs to be created manually from the traefik.toml file.
          name: configmap-traefik-toml
      - name: vol-acme-json-file
        persistentVolumeClaim:
          # The definition of this pvc should be in this (same) deployment file, at the top.
          claimName: pvc-traefik-acme-json
      - name: vol-dashboard-users-file
        secret:
          # secret should be created manually from the dashboard-users.htpasswd file
          secretName: secret-traefik-dashboard-users
      containers:
      - image: traefik:1.7
        name: traefik-ingress-controller
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: webui
          containerPort: 8080
        volumeMounts:
        - mountPath: "/etc/traefik/"
          name: vol-traefik-toml-file
        - mountPath: "/acme/"
          name: vol-acme-json-file
        - mountPath: "/secrets/"
          name: vol-dashboard-users-file
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
    - name: https
      port: 443
      protocol: TCP
    - name: webui
      port: 8080
      protocol: TCP

  type: LoadBalancer
