ingress-traefik/https-letsencrypt-DNS-Challenge-public-cloud/tomcat.yourdomain.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: default
  name: tomcat
  labels:
    app: tomcat
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:9
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "50m"
          requests:
            cpu: 10m
        volumeMounts:
        - name: web-content-dir
          mountPath: /usr/local/tomcat/webapps/
      volumes:
      - name: web-content-dir
        emptyDir: {}
    
# sample.war downloaded from: https://tomcat.apache.org/tomcat-7.0-doc/appdev/sample/sample.war
---

apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: tomcat
  labels:
    name: tomcat
    app: tomcat
spec:
  ports:
    - port: 8080
  selector:
    app: tomcat

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: tomcat-yourdomain
  labels:
    app: tomcat
spec:
  rules:
  - host: tomcat.demo.wbitt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 8080
